<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:itemTextAppearance="@style/NavigationDrawerStyle"
        app:menu="@menu/navigation_drawer_menu"
        app:itemTextColor="@color/primary_text_color"
        app:itemIconTint="@color/primary_text_color"
        app:itemBackground="@drawable/background_drawer_item"
        app:headerLayout="@layout/header_navigation_drawer" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.MainActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/green01_medium"
            android:theme="@style/CustomToolbarStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/Popup_theme" />

        <RadioGroup
            android:id="@+id/radio_button_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/radio_group_height"
            android:orientation="horizontal"
            android:visibility="gone"
            android:weightSum="7"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <com.example.gardeningapp.utils.DayViewRadioButton
                android:id="@+id/rb_sunday"
                android:layout_width="@dimen/check_box_width_height"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/background_day_view_list"
                android:button="@null"
                android:gravity="center"
                android:text="@string/sunday" />

            <com.example.gardeningapp.utils.DayViewRadioButton
                android:id="@+id/rb_monday"
                android:layout_width="@dimen/check_box_width_height"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/background_day_view_list"
                android:button="@null"
                android:gravity="center"
                android:text="@string/monday" />


            <com.example.gardeningapp.utils.DayViewRadioButton
                android:id="@+id/rb_tuesday"
                android:layout_width="@dimen/check_box_width_height"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/background_day_view_list"
                android:button="@null"
                android:gravity="center"
                android:text="@string/tuesday" />

            <com.example.gardeningapp.utils.DayViewRadioButton
                android:id="@+id/rb_wednesday"
                android:layout_width="@dimen/check_box_width_height"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/background_day_view_list"
                android:button="@null"
                android:gravity="center"
                android:text="@string/wednesday" />

            <com.example.gardeningapp.utils.DayViewRadioButton
                android:id="@+id/rb_thursday"
                android:layout_width="@dimen/check_box_width_height"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/background_day_view_list"
                android:button="@null"
                android:gravity="center"
                android:text="@string/thursday" />

            <com.example.gardeningapp.utils.DayViewRadioButton
                android:id="@+id/rb_friday"
                android:layout_width="@dimen/check_box_width_height"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/background_day_view_list"
                android:button="@null"
                android:gravity="center"
                android:text="@string/friday" />

            <com.example.gardeningapp.utils.DayViewRadioButton
                android:id="@+id/rb_saturday"
                android:layout_width="@dimen/check_box_width_height"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/background_day_view_list"
                android:button="@null"
                android:gravity="center"
                android:text="@string/saturday" />
        </RadioGroup>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_plant_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/recycler_view_padding"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radio_button_layout"
            tools:visibility="gone" />

        <ImageView
            android:id="@+id/iv_empty_plant_list"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/empty_list_image_height"
            android:contentDescription="@string/description_empty_plant_list"
            android:src="@drawable/ic_plant"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintVertical_bias="0.45" />

        <TextView
            android:id="@+id/tv_empty_plant_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_plants_found"
            android:textSize="@dimen/empty_list_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_empty_plant_list" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_button_margin"
            android:contentDescription="@string/floating_action_button"
            android:src="@drawable/ic_add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.drawerlayout.widget.DrawerLayout>